Update and rename 2020-09-3-vimplug.md to 2020-09-3-vim-plug.md

--- a/_posts/2020-09-3-vim-plug.md
+++ b/_posts/2020-09-3-vim-plug.md
@@ -68,7 +68,7 @@ By typing ":". Then type:
 
 This will open a Window and install NERDTree like this:
 
-[PlugInstall in Action](/assets/post-imgs/vim-install-plugins/PlugInstall.png)
+![PlugInstall in Action](/assets/post-imgs/vim-install-plugins/PlugInstall.png)
 
 {: .box-note}
 **Note:** I have already got few other plugins, and hence the extra.
