Half done sicp ex 1.1

--- a/_posts/2020-10-13-sicp-ex-1.1.md
+++ b/_posts/2020-10-13-sicp-ex-1.1.md
@@ -56,10 +56,10 @@ this exercise. So I am not gonna speak much about it, but make a table
 of the syntax:
 
 |Scheme syntax|English equivalent| Python equivalent|
-:-------------|:-----------------|:-----------------|
+:--------------------------------|:------------------|:---------------------------------|
 | (define <variable> <value>)                 | variable is value                                      | variable = value                 |
 | define (<name> <formal parameters>) <body>) | to do name, do body with the help of formal parameters | def <name>(<formal parameters>): |
 | (<name> <parameters>)                       | using a function                                       | <name>(<parameters>)             |
-| (cond (<p1> <e1>))                          |                                                        |                                  |
-|                                             |                                                        |                                  |                                            |                                                        |                                  |
-
+| (cond (<p1> <e1>)
+	(<p2><e2>))                          | if p1 is true, do e1 or if p2 is true, do do e2| e1 if p1 e2 elif p2|
+|
