Sicp ex 1.1: table: testing

--- a/_posts/2020-10-13-sicp-ex-1.1.md
+++ b/_posts/2020-10-13-sicp-ex-1.1.md
@@ -51,39 +51,21 @@ scheme. If you are reading this, you most likely also read SICP till
 this exercise. So I am not gonna speak much about it, but make a table
 of the syntax:
 
-<table style="width:72%;">
-<colgroup>
-<col style="width: 19%" />
-<col style="width: 26%" />
-<col style="width: 26%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: right;">Scheme syntax</th>
-<th style="text-align: center;">English equivalent</th>
-<th style="text-align: center;">Python equivalent</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: right;">(define &lt;vari</td>
-<td style="text-align: center;">able&gt; <value>) | va</td>
-<td style="text-align: center;">riable is value | variable = value</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">define (&lt;name</td>
-<td style="text-align: center;"><blockquote>
-<p>&lt;formal parameter |</p>
-</blockquote></td>
-<td style="text-align: center;">s&gt;)
-<body>
-)| to do name, do body with the help of formal parameters | def <name>(<formal parameters>): |
-<body></td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">(<name> &lt;para</td>
-<td style="text-align: center;">meters&gt;)</td>
-<td style="text-align: center;"><pre><code>      | using a function                                       | &lt;name&gt;(&lt;parameters&gt;)</code></pre></td>
-</tr>
-</tbody>
-</table>
+\+————————-+————————-+————————-+ | Scheme syntax | English equivalent |
+Python Equivalent |
++========================:+:=======================:+:========================+
+| `scheme | variable is value |`python | | (define variable value) | |
+variable = value | | `| |` | +————————-|————————-|————————-+ | `scheme |
+func is a set of instr- |`python | | (define func (params) | uctions
+done with the | def func(params): | | body) | help of params | body | |
+`| |` | +————————-|————————-|————————-+ | `scheme | Using a set of
+instruc- |`python | | (func params) | tions called func with |
+func(params) | | `| the help of params | |
++-------------------------|-------------------------|-------------------------+
+|`scheme | If p1 is true, do e1. | `python | | (cond (p1 e1) | (can be
+used as many ti-| if p1: e1 | | ;;... | mes as required) p1 is | # ... |
+| (pn en)) | a test, and e1 is an e- | elif pn: en | | | xpression |` |
++————————-|————————-|————————-+ | `scheme | If predicate is true,
+do|`python | | (if predicate consequent| consequent, else, do al-| if
+predicate: consequent| | alternative | ternative. | else: alternative |
+| `| |` | +————————-|————————-|————————-+
