--- a/_posts/2020-10-13-sicp-ex-1.1.md
+++ b/_posts/2020-10-13-sicp-ex-1.1.md
@@ -1,27 +1,29 @@
-So I had just started reading SICP. It’s this amazing book that was used
+So I had just started reading SICP. It's this amazing book that was used
 to teach Comp Sc. to students who had never programmed before at MIT.
 When I thought that I should write a blog post with a solution for every
 exercise I attempt. So I am gonna write solutions for all the exercise
 in SICP. My plan is to finish this book in one year.
 
-# My setup
+My setup
+========
 
-My plan is to use emacs(sorry for the adultery vim\!) with slime, and
-guile. I haven’t setup it up yet, though I will attach a link to the
+My plan is to use emacs(sorry for the adultery vim!) with slime, and
+guile. I haven't setup it up yet, though I will attach a link to the
 post when I do. I strongly encourage you to setup emacs though because
 soon the exercises will get really complicated, and the support emacs
 has for Lisp (Being written in lisp itself) will be really helpful while
 editing.
 
-So without further delay, Let’s get to the exercise
+So without further delay, Let's get to the exercise
 
-# The Question
+The Question
+============
 
 **Exercise 1.1:** Below is a sequence of expressions. What is the result
 printed by the interpreter in response to each expression? Assume that
 the sequence is to be evaluated in the order in which presented.
 
-``` scheme
+``` {.scheme}
 10
 (+ 5 3 4)
 (- 9 1)
@@ -44,28 +46,38 @@ the sequence is to be evaluated in the order in which presented.
    (+ a 1)
 ```
 
-# My Thoughts
+My Thoughts
+===========
 
 So far, the authors have been explaining about the basic syntax of
 scheme. If you are reading this, you most likely also read SICP till
 this exercise. So I am not gonna speak much about it, but make a table
 of the syntax:
 
-\+————————-+————————-+————————-+ | Scheme syntax | English equivalent |
-Python Equivalent |
++-------------------------+-------------------------+-------------------------+
+| Scheme syntax           | English equivalent      | Python Equivalent       |
 +========================:+:=======================:+:========================+
-| `scheme | variable is value |`python | | (define variable value) | |
-variable = value | | `| |` | +————————-|————————-|————————-+ | `scheme |
-func is a set of instr- |`python | | (define func (params) | uctions
-done with the | def func(params): | | body) | help of params | body | |
-`| |` | +————————-|————————-|————————-+ | `scheme | Using a set of
-instruc- |`python | | (func params) | tions called func with |
-func(params) | | `| the help of params | |
+| ```scheme               | variable is value       | ```python               |
+| (define variable value) |                         | variable = value        |
+| ```                     |                         | ```                     |
 +-------------------------|-------------------------|-------------------------+
-|`scheme | If p1 is true, do e1. | `python | | (cond (p1 e1) | (can be
-used as many ti-| if p1: e1 | | ;;... | mes as required) p1 is | # ... |
-| (pn en)) | a test, and e1 is an e- | elif pn: en | | | xpression |` |
-+————————-|————————-|————————-+ | `scheme | If predicate is true,
-do|`python | | (if predicate consequent| consequent, else, do al-| if
-predicate: consequent| | alternative | ternative. | else: alternative |
-| `| |` | +————————-|————————-|————————-+
+| ```scheme               | func is a set of instr- | ```python               |
+| (define func (params)   | uctions done with the   | def func(params):       |
+|    body)                | help of params          |     body                |
+| ```                     |                         | ```                     |
++-------------------------|-------------------------|-------------------------+
+| ```scheme               | Using a set of instruc- | ```python               |
+| (func params)           | tions called func with  | func(params)            |
+| ```                     | the help of params      |                         |
++-------------------------|-------------------------|-------------------------+
+| ```scheme               | If p1 is true, do e1.   | ```python               |
+| (cond (p1 e1)           | (can be used as many ti-| if p1: e1               |
+|       ;;...             | mes as required) p1 is  | # ...                   |
+|       (pn en))          | a test, and e1 is an e- | elif pn: en             |
+|                         | xpression               | ```                     |
++-------------------------|-------------------------|-------------------------+
+| ```scheme               | If predicate is true, do| ```python               |
+| (if predicate consequent| consequent, else, do al-| if predicate: consequent|
+|     alternative         | ternative.              | else: alternative       |
+| ```                     |                         | ```                     |
++-------------------------|-------------------------|-------------------------+
