--- a/_posts/2020-10-13-sicp-ex-1.1.md
+++ b/_posts/2020-10-13-sicp-ex-1.1.md
@@ -1,29 +1,27 @@
-So I had just started reading SICP. It's this amazing book that was used
+So I had just started reading SICP. It’s this amazing book that was used
 to teach Comp Sc. to students who had never programmed before at MIT.
 When I thought that I should write a blog post with a solution for every
 exercise I attempt. So I am gonna write solutions for all the exercise
 in SICP. My plan is to finish this book in one year.
 
-My setup
-========
+# My setup
 
-My plan is to use emacs(sorry for the adultery vim!) with slime, and
-guile. I haven't setup it up yet, though I will attach a link to the
+My plan is to use emacs(sorry for the adultery vim\!) with slime, and
+guile. I haven’t setup it up yet, though I will attach a link to the
 post when I do. I strongly encourage you to setup emacs though because
 soon the exercises will get really complicated, and the support emacs
 has for Lisp (Being written in lisp itself) will be really helpful while
 editing.
 
-So without further delay, Let's get to the exercise
+So without further delay, Let’s get to the exercise
 
-The Question
-============
+# The Question
 
 **Exercise 1.1:** Below is a sequence of expressions. What is the result
 printed by the interpreter in response to each expression? Assume that
 the sequence is to be evaluated in the order in which presented.
 
-``` {.scheme}
+``` scheme
 10
 (+ 5 3 4)
 (- 9 1)
@@ -46,38 +44,57 @@ the sequence is to be evaluated in the order in which presented.
    (+ a 1)
 ```
 
-My Thoughts
-===========
+# My Thoughts
 
 So far, the authors have been explaining about the basic syntax of
 scheme. If you are reading this, you most likely also read SICP till
 this exercise. So I am not gonna speak much about it, but make a table
 of the syntax:
 
-+-------------------------+-------------------------+-------------------------+
-| Scheme syntax           | English equivalent      | Python Equivalent       |
-+========================:+:=======================:+:========================+
-| ```scheme               | variable is value       | ```python               |
-| (define variable value) |                         | variable = value        |
-| ```                     |                         | ```                     |
-+-------------------------|-------------------------|-------------------------+
-| ```scheme               | func is a set of instr- | ```python               |
-| (define func (params)   | uctions done with the   | def func(params):       |
-|    body)                | help of params          |     body                |
-| ```                     |                         | ```                     |
-+-------------------------|-------------------------|-------------------------+
-| ```scheme               | Using a set of instruc- | ```python               |
-| (func params)           | tions called func with  | func(params)            |
-| ```                     | the help of params      |                         |
-+-------------------------|-------------------------|-------------------------+
-| ```scheme               | If p1 is true, do e1.   | ```python               |
-| (cond (p1 e1)           | (can be used as many ti-| if p1: e1               |
-|       ;;...             | mes as required) p1 is  | # ...                   |
-|       (pn en))          | a test, and e1 is an e- | elif pn: en             |
-|                         | xpression               | ```                     |
-+-------------------------|-------------------------|-------------------------+
-| ```scheme               | If predicate is true, do| ```python               |
-| (if predicate consequent| consequent, else, do al-| if predicate: consequent|
-|     alternative         | ternative.              | else: alternative       |
-| ```                     |                         | ```                     |
-+-------------------------|-------------------------|-------------------------+
+<table>
+<colgroup>
+<col style="width: 33%" />
+<col style="width: 33%" />
+<col style="width: 33%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: right;">Scheme syntax</th>
+<th style="text-align: center;">English equivalent</th>
+<th style="text-align: left;">Python Equivalent</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: right;"><div class="sourceCode" id="cb1"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb1-1" title="1">(<span class="ex">define</span><span class="fu"> variable </span>value)</a></code></pre></div></td>
+<td style="text-align: center;">variable is value</td>
+<td style="text-align: left;"><div class="sourceCode" id="cb2"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb2-1" title="1">variable <span class="op">=</span> value</a></code></pre></div></td>
+</tr>
+<tr class="even">
+<td style="text-align: right;"><div class="sourceCode" id="cb3"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb3-1" title="1">(<span class="ex">define</span><span class="fu"> func </span>(params)</a>
+<a class="sourceLine" id="cb3-2" title="2">   body)</a></code></pre></div></td>
+<td style="text-align: center;">func is a set of instr- uctions done with the help of params</td>
+<td style="text-align: left;"><div class="sourceCode" id="cb4"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb4-1" title="1"><span class="kw">def</span> func(params):</a>
+<a class="sourceLine" id="cb4-2" title="2">    body</a></code></pre></div></td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;"><div class="sourceCode" id="cb5"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb5-1" title="1">(func params)</a></code></pre></div></td>
+<td style="text-align: center;">Using a set of instruc- tions called func with the help of params</td>
+<td style="text-align: left;">```python func(params)</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">```scheme (cond (p1 e1) ;;… (pn en))</td>
+<td style="text-align: center;">If p1 is true, do e1. (can be used as many ti- mes as required) p1 is a test, and e1 is an e- xpression</td>
+<td style="text-align: left;"><div class="sourceCode" id="cb6"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb6-1" title="1"><span class="cf">if</span> p1: e1</a>
+<a class="sourceLine" id="cb6-2" title="2"><span class="co"># ...</span></a>
+<a class="sourceLine" id="cb6-3" title="3"><span class="cf">elif</span> pn: en</a></code></pre></div></td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;"><div class="sourceCode" id="cb7"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb7-1" title="1">(<span class="kw">if</span> predicate consequent</a>
+<a class="sourceLine" id="cb7-2" title="2">    alternative</a></code></pre></div></td>
+<td style="text-align: center;">If predicate is true, do consequent, else, do al- ternative.</td>
+<td style="text-align: left;"><div class="sourceCode" id="cb8"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb8-1" title="1"><span class="cf">if</span> predicate: consequent</a>
+<a class="sourceLine" id="cb8-2" title="2"><span class="cf">else</span>: alternative</a></code></pre></div></td>
+</tr>
+</tbody>
+</table>
