sicp ex 1.1: Table Fix typos

--- a/_posts/2020-10-13-sicp-ex-1.1.md
+++ b/_posts/2020-10-13-sicp-ex-1.1.md
@@ -73,28 +73,30 @@ of the syntax:
 <tr class="even">
 <td style="text-align: right;"><div class="sourceCode" id="cb3"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb3-1" title="1">(<span class="ex">define</span><span class="fu"> func </span>(params)</a>
 <a class="sourceLine" id="cb3-2" title="2">   body)</a></code></pre></div></td>
-<td style="text-align: center;">func is a set of instr- uctions done with the help of params</td>
+<td style="text-align: center;">func is a set of instr uctions done with the help of params</td>
 <td style="text-align: left;"><div class="sourceCode" id="cb4"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb4-1" title="1"><span class="kw">def</span> func(params):</a>
 <a class="sourceLine" id="cb4-2" title="2">    body</a></code></pre></div></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;"><div class="sourceCode" id="cb5"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb5-1" title="1">(func params)</a></code></pre></div></td>
-<td style="text-align: center;">Using a set of instruc- tions called func with the help of params</td>
-<td style="text-align: left;">```python func(params)</td>
+<td style="text-align: center;">Using a set of instruc tions called func with the help of params</td>
+<td style="text-align: left;"><div class="sourceCode" id="cb6"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb6-1" title="1"> func(params)</a></code></pre></div></td>
 </tr>
 <tr class="even">
-<td style="text-align: right;">```scheme (cond (p1 e1) ;;… (pn en))</td>
+<td style="text-align: right;"><div class="sourceCode" id="cb7"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb7-1" title="1">(<span class="kw">cond</span> (p1 e1)</a>
+<a class="sourceLine" id="cb7-2" title="2">      <span class="co">;;...</span></a>
+<a class="sourceLine" id="cb7-3" title="3">      (pn en))</a></code></pre></div></td>
 <td style="text-align: center;">If p1 is true, do e1. (can be used as many ti- mes as required) p1 is a test, and e1 is an e- xpression</td>
-<td style="text-align: left;"><div class="sourceCode" id="cb6"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb6-1" title="1"><span class="cf">if</span> p1: e1</a>
-<a class="sourceLine" id="cb6-2" title="2"><span class="co"># ...</span></a>
-<a class="sourceLine" id="cb6-3" title="3"><span class="cf">elif</span> pn: en</a></code></pre></div></td>
+<td style="text-align: left;"><div class="sourceCode" id="cb8"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb8-1" title="1"><span class="cf">if</span> p1: e1</a>
+<a class="sourceLine" id="cb8-2" title="2"><span class="co"># ...</span></a>
+<a class="sourceLine" id="cb8-3" title="3"><span class="cf">elif</span> pn: en</a></code></pre></div></td>
 </tr>
 <tr class="odd">
-<td style="text-align: right;"><div class="sourceCode" id="cb7"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb7-1" title="1">(<span class="kw">if</span> predicate consequent</a>
-<a class="sourceLine" id="cb7-2" title="2">    alternative</a></code></pre></div></td>
+<td style="text-align: right;"><div class="sourceCode" id="cb9"><pre class="sourceCode scheme"><code class="sourceCode scheme"><a class="sourceLine" id="cb9-1" title="1">(<span class="kw">if</span> predicate consequent</a>
+<a class="sourceLine" id="cb9-2" title="2">    alternative</a></code></pre></div></td>
 <td style="text-align: center;">If predicate is true, do consequent, else, do al- ternative.</td>
-<td style="text-align: left;"><div class="sourceCode" id="cb8"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb8-1" title="1"><span class="cf">if</span> predicate: consequent</a>
-<a class="sourceLine" id="cb8-2" title="2"><span class="cf">else</span>: alternative</a></code></pre></div></td>
+<td style="text-align: left;"><div class="sourceCode" id="cb10"><pre class="sourceCode python"><code class="sourceCode python"><a class="sourceLine" id="cb10-1" title="1"><span class="cf">if</span> predicate: consequent</a>
+<a class="sourceLine" id="cb10-2" title="2"><span class="cf">else</span>: alternative</a></code></pre></div></td>
 </tr>
 </tbody>
 </table>
