sicp ex 1.1 completed

--- a/_posts/2020-10-13-sicp-ex-1.1.md
+++ b/_posts/2020-10-13-sicp-ex-1.1.md
@@ -4,6 +4,8 @@ When I thought that I should write a blog post with a solution for every
 exercise I attempt. So I am gonna write solutions for all the exercise
 in SICP. My plan is to finish this book in one year.
 
+You can obtain a copy of SICP for free because of [MIT-Open course ware!](https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-001-structure-and-interpretation-of-computer-programs-spring-2005/)
+
 # My setup
 
 My plan is to use emacs(sorry for the adultery vim\!) with slime, and
@@ -100,3 +102,74 @@ of the syntax:
 </tr>
 </tbody>
 </table>
+
+
+# Answers
+
+So now that we have got out table, let us get started. To check our answers we can use the [Scheme shell](https://www.gnu.org/software/mit-scheme/documentation/testing/mit-scheme-user.html)
+
+> 10
+
+That will return 10
+
+> (+ 5 3 4)
+
+`(+ 5 3 4)` is basically "sum of 5,3,4" but in [prefix notation](https://en.wikipedia.org/wiki/Polish_notation). That will be 12.
+
+> (- 9 1)
+
+9 - 1 is 8. So it will return 8
+
+>( / 6 2)
+
+$6 \div 2$ is 3. So 3.
+
+> (+ (* 2 4) (- 4 6))
+
+First, $2 \times 4$ is 8 and 4 - 6 is -2.
+Then 8 + -2 is 6.
+
+> (define a 3)
+
+`a` is now three. 
+
+> (define b (+ a 1)))
+
+So b will be a + 1 , which is 3 + 1, which equals to 4.
+
+> (+ a b (* a b))
+
+First $a \times b = 3 \times 4 = 12$.
+Then 3 + 4 + 12 = 19.
+
+> (= a b)
+
+Now, this test that will output a Boolean.
+Since 3 is ***not*** = 4, it will be False.
+
+> (if (and (> b a) (< b (* a b)))
+    b
+    a)
+    
+`and` adds to the test, and now checks if ***both***(`(> b a)` and `(< b (* a b) ))` 
+return true. Since 4 is greater than 3 and 4 is lesser than 12, this returns True,
+and 4 is returned.
+
+> (cond ((= a 4) 6)
+        ((= b 4) (+ 6 7 a))
+        (else 25))
+        
+`b = 4` is the first thing that came true so,
+what will be returned will be 6 + 7 + 3 = 10.
+
+> (* (cond ((> b a) b a))
+           ((< a b) b)
+           (else -1))
+       (+ a 1))
+       
+
+This just multiplies whatever `cond` returns by 4.
+`cond` returns 4, so $4^{2} = 16$
+
+That's it! Tell us about in the comments below about your experience
+with SICP so far!
