Sicp ex 1.1: Add yaml

--- a/_posts/2020-10-13-sicp-ex-1.1.md
+++ b/_posts/2020-10-13-sicp-ex-1.1.md
@@ -1,3 +1,9 @@
+---
+title: Sicp Ex 1.1
+layout: post
+tags: [SICP, Lisp, Scheme]
+---
+
 So I had just started reading SICP. It’s this amazing book that was used
 to teach Comp Sc. to students who had never programmed before at MIT.
 When I thought that I should write a blog post with a solution for every
