--- a/_posts/2020-10-14-sicp-ex-1.3.md
+++ b/_posts/2020-10-14-sicp-ex-1.3.md
@@ -61,7 +61,7 @@ with the right numbers:
 
 This is the script:
 
-<script src="https://gist.github.com/benjamin-philip/benjamin-philip.github.io/assets/post-assets/sicp-ex-1.1/ex.scm"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FBenjamin-Philip%2Fbenjamin-philip.github.io%2Fblob%2Fmaster%2Fassets%2Fpost-assets%2Fsicp-ex-1.3%2Fex.scm&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 
 And now we are done! Running this script in the shell with 4 5 6, we get:
 ```
