--- a/_posts/2020-10-14-sicp-ex-1.3.md
+++ b/_posts/2020-10-14-sicp-ex-1.3.md
@@ -51,7 +51,7 @@ The simplest way is to write a `cond` that will deal with all the possibilities
 and do something accordingly. So now make a function that will run `sum-squares`
 with the right numbers:
 
-```
+```scheme
 (define (func x y z)
   ;;x is numeral 1, y is numeral 2 and z numeral 3
    (cond ((and (>= x y) (>= y z)) (sum-squares x y))
@@ -61,7 +61,23 @@ with the right numbers:
 
 This is the script:
 
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FBenjamin-Philip%2Fbenjamin-philip.github.io%2Fblob%2Fmaster%2Fassets%2Fpost-assets%2Fsicp-ex-1.3%2Fex.scm&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
+;;Sicp ex 1.3
+
+(define (sqr x)
+  ;;x is the numeral to be squared
+  (* x x))
+
+
+(define (sum-squares x y)
+  ;;x is numeral 1 and y numeral 2
+  (+ (sqr x) (sqr y)))
+
+
+(define (func x y z)
+  ;;x is numeral 1, y is numeral 2 and z numeral 3
+  (cond ((and (>= x y) (>= y z)) (sum-squares x y))
+        ((and (>= x y) (>= z y)) (sum-squares x z))
+        ((and (>= y x) (>= z x)) (sum-squares z y))))
 
 And now we are done! Running this script in the shell with 4 5 6, we get:
 ```
