--- a/_posts/2020-10-14-sicp-ex-1.3.md
+++ b/_posts/2020-10-14-sicp-ex-1.3.md
@@ -61,6 +61,7 @@ with the right numbers:
 
 This is the script:
 
+```scheme
 ;;Sicp ex 1.3
 
 (define (sqr x)
@@ -78,6 +79,7 @@ This is the script:
   (cond ((and (>= x y) (>= y z)) (sum-squares x y))
         ((and (>= x y) (>= z y)) (sum-squares x z))
         ((and (>= y x) (>= z x)) (sum-squares z y))))
+```
 
 And now we are done! Running this script in the shell with 4 5 6, we get:
 ```
