--- a/_posts/2020-10-14-sicp-ex-1.2.md
+++ b/_posts/2020-10-14-sicp-ex-1.2.md
@@ -53,6 +53,6 @@ Doing the same for the denominator, we get:
 ```
 
 And that's it! Now that's it! Remember though that you will to have follow
-[BODMAS](https://en.wikipedia.org/wiki/Order_of_operations) and BODMAS is a 
-mess! Maybe we should use Prefix of [RPN](https://en.wikipedia.org/wiki/Reverse_Polish_notation)?
+[BODMAS](https://en.wikipedia.org/wiki/Order_of_operations) while translating, and BODMAS is a 
+mess! Maybe we should all switch to Prefix or [RPN](https://en.wikipedia.org/wiki/Reverse_Polish_notation)?
 Tell us what you think in the comments below!
