Update Posts to new asset management scheme
Move assets/post-assets to collection-assets/post. Also updated Posts to new path to use generated variable for asset path.

--- a/collections/_posts/2020-09-3-vim-plug.md
+++ b/collections/_posts/2020-09-3-vim-plug.md
@@ -32,7 +32,8 @@ checked if it fulfilled the following:
 I found Pathogen and apt-vim just a pain to handle. I actually didn't
 notice Vundle, So I just went for vim-plug. To my knowledge, there isn't
 much difference between Vundle and vim-plug (that is a difference that
-the User should be aware of)
+the User should be aware of, other than syntax). Essentially you take 
+what you fancy first.
 
 # Installing vim-plug
 
@@ -68,7 +69,7 @@ By typing ":". Then type:
 
 This will open a Window and install NERDTree like this:
 
-![PlugInstall in Action](/assets/post-assets/vim-install-plugins/PlugInstall.png)
+![PlugInstall in Action]({{ page.assets-var | append: 'PlugInstall.png'}})
 
 {: .box-note}
 **Note:** I have already got few other plugins, and hence the extra.
