--- a/collections/_sicp/2020-10-20-sicp-ex-1.4.md
+++ b/collections/_sicp/2020-10-20-sicp-ex-1.4.md
@@ -2,7 +2,7 @@
 title: Ex 1.4
 tags: [Lisp, Scheme, SICP]
 ---
-This the 4th Exercise in S
+This the 4th Exercise in SICP
 
 # The Question
 
@@ -15,7 +15,7 @@ observation to describe the behavior of the following procedure:
   ((if (> b 0) + - ) a b))
 ```
 
-# My Answer 
+# The Answer 
 
 Now in this case, all that is being done is:
 
