--- a/collections/_sicp/2020-10-20-sicp-ex-1.4.md
+++ b/collections/_sicp/2020-10-20-sicp-ex-1.4.md
@@ -1,5 +1,5 @@
 ---
-title: Ex 1.4
+title: Structure and Implementation of Computer Programs: Ex 1.4
 tags: [Lisp, Scheme, SICP]
 ---
 This the 4th Exercise in SICP
