--- a/collections/_sicp/2020-10-13-sicp-ex-1.1.md
+++ b/collections/_sicp/2020-10-13-sicp-ex-1.1.md
@@ -1,5 +1,5 @@
 ---
-title: Sicp Ex 1.1
+title: Structure and Implementation of Computer Programs: Ex 1.1
 layout: post
 tags: [SICP, Lisp, Scheme]
 ---
