Revert "Improve SICP SEO"
This reverts commit 6c4b85233b9e8486497044ab7bdfac632d84928c.

--- a/collections/_sicp/2020-10-14-sicp-ex-1.2.md
+++ b/collections/_sicp/2020-10-14-sicp-ex-1.2.md
@@ -1,5 +1,5 @@
 ---
-title: Structure and Implementation of Computer Programs: Ex 1.2
+title: Sicp Ex 1.2
 layout: post
 tags: [SICP, Lisp, Scheme]
 ---
