--- a/collections/_sicp/2020-10-14-sicp-ex-1.3.md
+++ b/collections/_sicp/2020-10-14-sicp-ex-1.3.md
@@ -1,7 +1,7 @@
 ---
 title: Sicp Ex 1.3
 layout: post
-tags: [SICP, Lisp, Scheme]
+tags: [Sicp, Lisp, Scheme]
 ---
 
 This is the third Sicp Exercise, and we finally start writing scheme programs!
