--- a/collections/_sicp/2020-10-20-sicp-ex-1.5.md
+++ b/collections/_sicp/2020-10-20-sicp-ex-1.5.md
@@ -1,5 +1,6 @@
 ---
-title: Structure and Implementation of Computer Programs: Ex 1.5
+title: Ex 1.5
+comments: true
 tags: [SICP, Scheme, Lisp]
 ---
 
