--- a/collections/_posts/2020-11-09-Setup-WSL.md
+++ b/collections/_posts/2020-11-09-Setup-WSL.md
@@ -80,13 +80,13 @@ there will be a new [powershell command](https://devblogs.microsoft.com/commandl
 
 Open Microsoft Store and search for Linux:
 
-![Linux Distros pic]({{ page.assets-var | append: '/store.png'}})
+![Linux Distros pic]({{ page.assets_var | append: '/store.png'}})
 
 Now all you have to do is Install a distro of your choice.
 Once its done, all you will need to type in a Unix username and a password
 
 
-![Ubuntu Installation]({{ page.assets-var | append: '/store.png'}})
+![Ubuntu Installation]({{ page.assets_var | append: '/store.png'}})
 
 # What do you use WSL for?
 
